discussion/kv_engine/158441/158441_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Move pure virtual KVStore functions to IFace

Change-Id: I5bfcf9e716c1b2e7f93afb7a825205798a1ccd15

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-29 17:46:09.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-29 18:22:05.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38181/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0141/0157]: test failover log behavior...(125 ms) OK


99% tests passed, 1 tests failed out of 402

Total Test time (real) = 634.37 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38181/ )

Timeout of a CTest test 402/402 Test #250: ep_testsuite.value_eviction.comp_passive ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38181/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10959/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:64:17: error: use of undeclared identifier "Vbid" [clang-diagnostic-error]
                Vbid, CompactionConfig&, uint64_t)>;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:64:23: error: "CompactionConfig" does not refer to a value [clang-diagnostic-error]
                Vbid, CompactionConfig&, uint64_t)>;
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:29:8: note: declared here
struct CompactionConfig;
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:64:40: error: expected expression [clang-diagnostic-error]
                Vbid, CompactionConfig&, uint64_t)>;
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:64:42: error: unexpected type name "uint64_t": expected expression [clang-diagnostic-error]
                Vbid, CompactionConfig&, uint64_t)>;
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:67:28: error: use of undeclared identifier "DiskDocKey" [clang-diagnostic-error]
        std::unordered_map<DiskDocKey, vb_bgfetch_item_ctx_t>;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:110:13: error: unknown type name "GetStatsMap" [clang-diagnostic-error]
    virtual GetStatsMap getStats(
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:152:50: error: unknown type name "queued_item" [clang-diagnostic-error]
    virtual void set(TransactionContext& txnCtx, queued_item item) = 0;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:161:13: error: unknown type name "GetValue" [clang-diagnostic-error]
    virtual GetValue get(const DiskDocKey& key,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:161:32: error: unknown type name "DiskDocKey" [clang-diagnostic-error]
    virtual GetValue get(const DiskDocKey& key,
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:162:26: error: unknown type name "Vbid" [clang-diagnostic-error]
                         Vbid vb,
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:174:13: error: unknown type name "GetValue" [clang-diagnostic-error]
    virtual GetValue getWithHeader(const KVFileHandle& kvFileHandle,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:175:42: error: unknown type name "DiskDocKey" [clang-diagnostic-error]
                                   const DiskDocKey& key,
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:176:36: error: unknown type name "Vbid" [clang-diagnostic-error]
                                   Vbid vb,
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:192:27: error: unknown type name "Vbid" [clang-diagnostic-error]
    virtual void getMulti(Vbid vb, vb_bgfetch_queue_t& itms) const = 0;
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:192:36: error: unknown type name "vb_bgfetch_queue_t" [clang-diagnostic-error]
    virtual void getMulti(Vbid vb, vb_bgfetch_queue_t& itms) const = 0;
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:199:43: error: use of undeclared identifier "GetValue" [clang-diagnostic-error]
    using GetRangeCb = std::function<void(GetValue&& value)>;
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:199:54: error: use of undeclared identifier "value" [clang-diagnostic-error]
    using GetRangeCb = std::function<void(GetValue&& value)>;
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:217:27: error: unknown type name "Vbid" [clang-diagnostic-error]
    virtual void getRange(Vbid vb,
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:218:33: error: unknown type name "DiskDocKey" [clang-diagnostic-error]
                          const DiskDocKey& startKey,
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10959/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:64:17:
error: use of undeclared identifier "Vbid" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10959/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9625/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11667/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/566/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/580/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12551/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12733/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20635/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13088/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
